# BitonicSort

./: .gitignore  CMakeLists.txt  README.md  bootstrap  conanfile.txt  install
.github/workflows/: regression.yml
__debug/stacktrace/: dump.cppm
cmake/debug/: stacktrace.cmake
cmake/tests/benchmark/: benchmark.cmake
cmake/tests/e2e/: bitonic-sort-e2e-tests.cmake
include/global/: custom_console_output.hpp  macros.hpp
include/math/: math.hpp
include/sort/bitonic/: sort.hpp
src/math/: math.cppm
src/sort/bitonic/: sort.cl  sort.cppm
tests/: generate-test.py
tests/benchmark/results/: README.md
tests/benchmark/src/: benchmark-template.hpp  bitonicsort-local-time-measure.cpp  bitonicsort-time-measure.cpp  run-benchmark.sh.in  stdsort-time-measure.cpp
tests/e2e/: bitonic-sort.cpp  check-test-result.py  run_n_test.sh.in
